--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -523,7 +523,7 @@ hr {
   padding: 27px 44px;
   text-transform: uppercase;
   font-family: "Roboto", sans-serif;
-  color: #fff;
+  color: rgb(5, 5, 5);
   cursor: pointer;
   display: inline-block;
   font-size: 14 px;
@@ -551,7 +551,7 @@ hr {
   top: 0;
   width: 101%;
   height: 101%;
-  background: #fff;
+  background: grey;
   color: #000 !important;
   z-index: 1;
   transition: transform 0.5s;
@@ -632,6 +632,11 @@ a:hover {
   border: 0;
 }
 
+#navigation li {
+  margin-right: 10px; /* Adjust the value as needed */
+}
+
+
 #hero{
   background-image: url('../../assets/img/profile.jpeg');
   background-repeat: no-repeat;
@@ -641,7 +646,7 @@ a:hover {
 }
 
 #hero-satu{
-  background-image: url('../../assets/img/siswa.JPG');
+  background-image: url('../../assets/img/murid.jpeg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
