--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4067,7 +4067,7 @@ hero-btn {
   content: "";
   width: 100%;
   height: 0;
-  background: #ff2143;
+  background: #3EB489;
   -webkit-transition: all 0.4s ease-out 0s;
   -moz-transition: all 0.4s ease-out 0s;
   -ms-transition: all 0.4s ease-out 0s;
@@ -4081,7 +4081,7 @@ hero-btn {
 
 /* line 29, C:/Users/HP/Desktop/264.Business_HTML/HTML/assets/scss/_categories.scss */
 .categories-area .single-cat .cat-icon span {
-  color: #eb566c;
+  color: #3EB489;
   font-size: 65px;
   margin-bottom: 30px;
   display: block;
